Modified CMakeList and added a function for executing two identical commands

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,17 +1,23 @@
-cmake_minimum_required(VERSION 3.20)
+cmake_minimum_required(VERSION 3.17)
 project(push_swap C)
 
 set(CMAKE_C_STANDARD 99)
 
-include_directories(includes)
-include_directories(libft/includes)
+include_directories(includes libft/includes)
 
 add_executable(push_swap
         libft/srcs/first_part/ft_atoi.c
         libft/srcs/first_part/ft_isdigit.c
+        libft/srcs/first_part/ft_memcpy.c
+        libft/srcs/first_part/ft_strchr.c
+        libft/srcs/first_part/ft_strdup.c
         libft/srcs/first_part/ft_strlen.c
+        libft/srcs/first_part/ft_strncmp.c
         libft/srcs/second_part/ft_split.c
+        libft/srcs/second_part/ft_strjoin.c
         libft/srcs/second_part/ft_substr.c
-        srcs/main.c
+        srcs/actions.c
         srcs/exception.c
+        srcs/get_next_line.c
+        srcs/main.c
         )
