Wrote an algorithm for 4 numbers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,5 +28,7 @@ add_executable(push_swap
         srcs/get_next_line.c
         srcs/little_sort.c
         srcs/main.c
+        srcs/sort_five_and_four_nums.c
+        srcs/utils.c
 
         )
