Wrote two function for finding min and max values and added a calculation of ranges of values

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,8 @@ add_executable(push_swap
         srcs/lists/listLength.c
         srcs/lists/printLinkedList.c
         srcs/lists/pushBack.c
+        srcs/lists/find_max_value.c
+        srcs/lists/find_min_value.c
 
         srcs/actions.c
         srcs/exception.c
